5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4358/executions/1633_2918.log
== SUBMITION (2019-04-02 18:12:28) 
-- CODE:
precoingresso(float(input("Qual o valor integrau do ingresso ?")))
quantidadeingresso(int(input("Qual é a quantidade de ingresso ?")))



print(precoingresso*quantidadeingresso)

precoPromocional=precoingresso-(precoingresso*(desconto/100))

-- EXECUTION TIME:
0.164911
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2918/main.py", line 1, in <module>
    precoingresso(float(input()))
NameError: name 'precoingresso' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:12:31) 
-- CODE:
precoingresso(float(input("Qual o valor integrau do ingresso ?")))
quantidadeingresso(int(input("Qual é a quantidade de ingresso ?")))



print(precoingresso*quantidadeingresso)

precoPromocional=precoingresso-(precoingresso*(desconto/100))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    precoingresso(float(input()))
NameError: name 'precoingresso' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:13:17) 
-- CODE:
precoingresso=(float(input("Qual o valor integrau do ingresso ?")))
quantidadeingresso=(int(input("Qual é a quantidade de ingresso ?")))



print(precoingresso*quantidadeingresso)

precoPromocional=precoingresso-(precoingresso*(desconto/100))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    precoPromocional=precoingresso-(precoingresso*(desconto/100))
NameError: name 'desconto' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:13:42) 
-- CODE:
precoingresso=(float(input("Qual o valor integrau do ingresso ?")))
quantidadeingresso=(int(input("Qual é a quantidade de ingresso ?")))



print(precoingresso*quantidadeingresso)

precoPromocional=precoingresso-(precoingresso*(desconto/100))

-- EXECUTION TIME:
0.147069
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2918/main.py", line 8, in <module>
    precoPromocional=precoingresso-(precoingresso*(desconto/100))
NameError: name 'desconto' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:13:44) 
-- CODE:
precoingresso=(float(input("Qual o valor integrau do ingresso ?")))
quantidadeingresso=(int(input("Qual é a quantidade de ingresso ?")))



print(precoingresso*quantidadeingresso)

precoPromocional=precoingresso-(precoingresso*(desconto/100))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    precoPromocional=precoingresso-(precoingresso*(desconto/100))
NameError: name 'desconto' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:15:21) 
-- CODE:
precoingresso=(float(input("Qual o valor integrau do ingresso ?")))
quantidadeingresso=(int(input("Qual é a quantidade de ingresso ?")))



print(precoingresso*quantidadeingresso)

precoPromocional=precoingresso-(precoingresso*(desconto/100))

-- EXECUTION TIME:
0.140368
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2918/main.py", line 8, in <module>
    precoPromocional=precoingresso-(precoingresso*(desconto/100))
NameError: name 'desconto' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:16:17) 
-- CODE:
precoingresso=(float(input("Qual o valor integrau do ingresso ?")))
quantidadeingresso=(int(input("Qual é a quantidade de ingresso ?")))



print(precoingresso*quantidadeingresso)

precoPromocional=precoingresso-(precoingresso*(30/100))

-- EXECUTION TIME:
0.127933
-- TEST CASE 1:
---- input:
28.50
5
---- correct output:
114.0
---- user output:
142.5
-- TEST CASE 2:
---- input:
26.95
8
---- correct output:
172.48
---- user output:
215.6
-- TEST CASE 3:
---- input:
42.42
3
---- correct output:
101.81
---- user output:
127.26
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:18:50) 
-- CODE:
precoingresso=(float(input("Qual o valor integrau do ingresso ?")))
quantidadeingresso=(int(input("Qual é a quantidade de ingresso ?")))



print(round(precoingresso*quantidadeingresso))

precoPromocional=precoingresso-(precoingresso*(30/100))

-- EXECUTION TIME:
0.189978
-- TEST CASE 1:
---- input:
28.50
5
---- correct output:
114.0
---- user output:
142
-- TEST CASE 2:
---- input:
26.95
8
---- correct output:
172.48
---- user output:
216
-- TEST CASE 3:
---- input:
42.42
3
---- correct output:
101.81
---- user output:
127
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:18:52) 
-- CODE:
precoingresso=(float(input("Qual o valor integrau do ingresso ?")))
quantidadeingresso=(int(input("Qual é a quantidade de ingresso ?")))



print(round(precoingresso*quantidadeingresso))

precoPromocional=precoingresso-(precoingresso*(30/100))

-- EXECUTION TIME:
0.16821
-- TEST CASE 1:
---- input:
28.50
5
---- correct output:
114.0
---- user output:
142
-- TEST CASE 2:
---- input:
26.95
8
---- correct output:
172.48
---- user output:
216
-- TEST CASE 3:
---- input:
42.42
3
---- correct output:
101.81
---- user output:
127
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:18:53) 
-- CODE:
precoingresso=(float(input("Qual o valor integrau do ingresso ?")))
quantidadeingresso=(int(input("Qual é a quantidade de ingresso ?")))



print(round(precoingresso*quantidadeingresso))

precoPromocional=precoingresso-(precoingresso*(30/100))

-- OUTPUT:
142
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:24:02) 
-- CODE:
precoingresso=(float(input("Qual o valor integrau do ingresso ?")))
quantidadeingresso=(int(input("Qual é a quantidade de ingresso ?")))
valortotaldacompra=precoingresso*quantidadeingresso


print(round(valortotaldacompra))
precoPromocional=precoingresso-(precoingresso*(20/100))

-- OUTPUT:
142
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:25:20) 
-- CODE:
precoingresso=(float(input("Qual o valor integrau do ingresso ?")))
quantidadeingresso=(int(input("Qual a quantidade de ingressos")))
valortotaldacompra=precoingresso*quantidadeingresso


print(round(valortotaldacompra))
precoPromocional=precoingresso-(precoingresso*(20/100))

-- OUTPUT:
142
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:27:09) 
-- CODE:
precoingresso=(float(input("Qual o valor integrau do ingresso ?")))
quantidadeingresso=(int(input("Qual a quantidade de ingressos?")))
valortotaldacompra=precoingresso*quantidadeingresso
print(round(valortotaldacompra))
precoPromocional= precoingresso-(precoingresso*(20/100))
print(round(precoPromocional))
-- OUTPUT:
142
23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:27:28) 
-- CODE:
precoingresso=(float(input("Qual o valor integrau do ingresso ?")))
quantidadeingresso=(int(input("Qual a quantidade de ingressos?")))
valortotaldacompra=precoingresso*quantidadeingresso
print(round(valortotaldacompra))
precoPromocional= precoingresso-(precoingresso*(20/100))
print(round(precoPromocional))
-- EXECUTION TIME:
0.230478
-- TEST CASE 1:
---- input:
28.50
5
---- correct output:
114.0
---- user output:
142
23
-- TEST CASE 2:
---- input:
26.95
8
---- correct output:
172.48
---- user output:
216
22
-- TEST CASE 3:
---- input:
42.42
3
---- correct output:
101.81
---- user output:
127
34
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:27:33) 
-- CODE:
precoingresso=(float(input("Qual o valor integrau do ingresso ?")))
quantidadeingresso=(int(input("Qual a quantidade de ingressos?")))
valortotaldacompra=precoingresso*quantidadeingresso
print(round(valortotaldacompra))
precoPromocional= precoingresso-(precoingresso*(20/100))
print(round(precoPromocional))
-- EXECUTION TIME:
0.170901
-- TEST CASE 1:
---- input:
28.50
5
---- correct output:
114.0
---- user output:
142
23
-- TEST CASE 2:
---- input:
26.95
8
---- correct output:
172.48
---- user output:
216
22
-- TEST CASE 3:
---- input:
42.42
3
---- correct output:
101.81
---- user output:
127
34
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:28:06) 
-- CODE:
precoingresso=(float(input("Qual o valor integrau do ingresso ?")))
quantidadeingresso=(int(input("Qual a quantidade de ingressos?")))
valortotaldacompra=precoingresso*quantidadeingresso
print(round(valortotaldacompra))
precoPromocional= precoingresso-(precoingresso*(20/100))
print(round(precoPromocional))
-- OUTPUT:
142
23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:29:49) 
-- CODE:
precoingresso=(float(input("Qual o valor integrau do ingresso ?")))
quantidadeingresso=(int(input("Qual a quantidade de ingressos?")))
valortotaldacompra=precoingresso*quantidadeingresso
print(round(valortotaldacompra))
precoPromocional= precoingresso-(precoingresso*(20/100))
print(round(precoPromocional))
-- OUTPUT:
142
23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:30:25) 
-- CODE:
precoingresso=(float(input(round("Qual o valor integrau do ingresso ?"))))
quantidadeingresso=(int(input("Qual a quantidade de ingressos?")))
valortotaldacompra=precoingresso*quantidadeingresso
print(round(valortotaldacompra))
precoPromocional= precoingresso-(precoingresso*(20/100))
print(round(precoPromocional))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    precoingresso=(float(input(round("Qual o valor integrau do ingresso ?"))))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:30:30) 
-- CODE:
precoingresso=(float(input(round("Qual o valor integrau do ingresso ?"))))
quantidadeingresso=(int(input("Qual a quantidade de ingressos?")))
valortotaldacompra=precoingresso*quantidadeingresso
print(round(valortotaldacompra))
precoPromocional= precoingresso-(precoingresso*(20/100))
print(round(precoPromocional))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    precoingresso=(float(input(round("Qual o valor integrau do ingresso ?"))))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:31:03) 
-- CODE:
precoingresso=round(float(input("Qual o valor integrau do ingresso ?")))
quantidadeingresso=(int(input("Qual a quantidade de ingressos?")))
valortotaldacompra=precoingresso*quantidadeingresso
print(round(valortotaldacompra))
precoPromocional= precoingresso-(precoingresso*(20/100))
print(round(precoPromocional))
-- OUTPUT:
140
22
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:31:52) 
-- CODE:
precoingresso=round(float(input("Qual o valor integrau do ingresso ?")))
quantidadeingresso=(int(input("Qual a quantidade de ingressos?")))
valortotaldacompra=precoingresso*quantidadeingresso
print(round(valortotaldacompra))
precoPromocional= precoingresso-(precoingresso*(20/100))
print(round(precoPromocional))
-- EXECUTION TIME:
0.177792
-- TEST CASE 1:
---- input:
28.50
5
---- correct output:
114.0
---- user output:
140
22
-- TEST CASE 2:
---- input:
26.95
8
---- correct output:
172.48
---- user output:
216
22
-- TEST CASE 3:
---- input:
42.42
3
---- correct output:
101.81
---- user output:
126
34
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:31:54) 
-- CODE:
precoingresso=round(float(input("Qual o valor integrau do ingresso ?")))
quantidadeingresso=(int(input("Qual a quantidade de ingressos?")))
valortotaldacompra=precoingresso*quantidadeingresso
print(round(valortotaldacompra))
precoPromocional= precoingresso-(precoingresso*(20/100))
print(round(precoPromocional))
-- EXECUTION TIME:
0.192715
-- TEST CASE 1:
---- input:
28.50
5
---- correct output:
114.0
---- user output:
140
22
-- TEST CASE 2:
---- input:
26.95
8
---- correct output:
172.48
---- user output:
216
22
-- TEST CASE 3:
---- input:
42.42
3
---- correct output:
101.81
---- user output:
126
34
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:32:38) 
-- CODE:
precoingresso=round(float(input("Qual o valor integrau do ingresso ?")))
quantidadeingresso=(int(input("Qual a quantidade de ingressos?")))
valortotaldacompra=precoingresso*quantidadeingresso
print(valortotaldacompra)
precoPromocional= precoingresso-(precoingresso*(20/100))
print(precoPromocional)
-- OUTPUT:
140
22.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:33:16) 
-- CODE:
precoingresso=round(float(input("Qual o valor integrau do ingresso ?")))
quantidadeingresso=(int(input("Qual a quantidade de ingressos?")))
valortotaldacompra=precoingresso*quantidadeingresso
print(valortotaldacompra)
precoPromocional= precoingresso-(precoingresso*(20/100))
print(precoPromocional)
-- EXECUTION TIME:
0.259597
-- TEST CASE 1:
---- input:
28.50
5
---- correct output:
114.0
---- user output:
140
22.4
-- TEST CASE 2:
---- input:
26.95
8
---- correct output:
172.48
---- user output:
216
21.6
-- TEST CASE 3:
---- input:
42.42
3
---- correct output:
101.81
---- user output:
126
33.6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:34:28) 
-- CODE:
precoingresso=round(float(input("Qual o valor integrau do ingresso ?")))
quantidadeingresso=(int(input("Qual a quantidade de ingressos?")))
valortotaldacompra=precoingresso*quantidadeingresso
print(round(valortotaldacompra))
precoPromocional= precoingresso-(precoingresso*(20/100))
print(round(precoPromocional))
-- OUTPUT:
140
22
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:35:34) 
-- CODE:
precoingresso=(float(input("Qual o valor integrau do ingresso ?")))
quantidadeingresso=(int(input("Qual a quantidade de ingressos?")))
valortotaldacompra=precoingresso*quantidadeingresso
print(round(valortotaldacompra))
precoPromocional= precoingresso-(precoingresso*(20/100))
print(round(precoPromocional))
-- EXECUTION TIME:
0.159276
-- TEST CASE 1:
---- input:
28.50
5
---- correct output:
114.0
---- user output:
142
23
-- TEST CASE 2:
---- input:
26.95
8
---- correct output:
172.48
---- user output:
216
22
-- TEST CASE 3:
---- input:
42.42
3
---- correct output:
101.81
---- user output:
127
34
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:35:37) 
-- CODE:
precoingresso=(float(input("Qual o valor integrau do ingresso ?")))
quantidadeingresso=(int(input("Qual a quantidade de ingressos?")))
valortotaldacompra=precoingresso*quantidadeingresso
print(round(valortotaldacompra))
precoPromocional= precoingresso-(precoingresso*(20/100))
print(round(precoPromocional))
-- OUTPUT:
142
23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:37:58) 
-- CODE:
precoingresso=(float(input("Qual o valor integrau do ingresso ?")))
quantidadeingresso=(int(input("Qual a quantidade de ingressos?")))
valortotaldacompra=precoingresso*quantidadeingresso
print(round(valortotaldacompra))
precoPromocional= precoingresso-(precoingresso*(20/100))
print(round(precoPromocional))
-- EXECUTION TIME:
0.214985
-- TEST CASE 1:
---- input:
28.50
5
---- correct output:
114.0
---- user output:
142
23
-- TEST CASE 2:
---- input:
26.95
8
---- correct output:
172.48
---- user output:
216
22
-- TEST CASE 3:
---- input:
42.42
3
---- correct output:
101.81
---- user output:
127
34
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:40:50) 
-- CODE:
precoingresso=(float(input("Qual o valor integrau do ingresso ?")))
quantidadeingresso=(int(input("Qual a quantidade de ingressos?")))
valortotaldacompra=precoingresso*quantidadeingresso
print(valortotaldacompra)
precoPromocional= precoingresso-(precoingresso*(20/100))
print(precoPromocional)
-- EXECUTION TIME:
0.177303
-- TEST CASE 1:
---- input:
28.50
5
---- correct output:
114.0
---- user output:
142.5
22.8
-- TEST CASE 2:
---- input:
26.95
8
---- correct output:
172.48
---- user output:
215.6
21.56
-- TEST CASE 3:
---- input:
42.42
3
---- correct output:
101.81
---- user output:
127.26
33.936
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:40:54) 
-- CODE:
precoingresso=(float(input("Qual o valor integrau do ingresso ?")))
quantidadeingresso=(int(input("Qual a quantidade de ingressos?")))
valortotaldacompra=precoingresso*quantidadeingresso
print(valortotaldacompra)
precoPromocional= precoingresso-(precoingresso*(20/100))
print(precoPromocional)
-- OUTPUT:
142.5
22.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:44:56) 
-- CODE:
precoingresso=(float(input("Qual o valor integrau do ingresso ?")))
quantidadeingresso=(int(input("Qual a quantidade de ingressos?")))
valortotaldacompra=precoingresso*quantidadeingresso
print(valortotaldacompra)
precoPromocional= precoingresso-(precoingresso*(20/100))
print(precoPromocional)
-- EXECUTION TIME:
0.146349
-- TEST CASE 1:
---- input:
28.50
5
---- correct output:
114.0
---- user output:
142.5
22.8
-- TEST CASE 2:
---- input:
26.95
8
---- correct output:
172.48
---- user output:
215.6
21.56
-- TEST CASE 3:
---- input:
42.42
3
---- correct output:
101.81
---- user output:
127.26
33.936
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:45:01) 
-- CODE:
precoingresso=(float(input("Qual o valor integrau do ingresso ?")))
quantidadeingresso=(int(input("Qual a quantidade de ingressos?")))
valortotaldacompra=precoingresso*quantidadeingresso
print(valortotaldacompra)
precoPromocional= precoingresso-(precoingresso*(20/100))
print(precoPromocional)
-- EXECUTION TIME:
0.138684
-- TEST CASE 1:
---- input:
28.50
5
---- correct output:
114.0
---- user output:
142.5
22.8
-- TEST CASE 2:
---- input:
26.95
8
---- correct output:
172.48
---- user output:
215.6
21.56
-- TEST CASE 3:
---- input:
42.42
3
---- correct output:
101.81
---- user output:
127.26
33.936
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:46:18) 
-- CODE:
precoingresso=(float(input("Qual o valor integrau do ingresso ?")))
quantidadeingresso=(int(input("Qual a quantidade de ingressos?")))
valortotaldacompra=precoingresso*quantidadeingresso
print(round(valortotaldacompra, 2))
precoPromocional= precoingresso-(precoingresso*(20/100))
print(round(precoPromocional, 2))
-- EXECUTION TIME:
0.193813
-- TEST CASE 1:
---- input:
28.50
5
---- correct output:
114.0
---- user output:
142.5
22.8
-- TEST CASE 2:
---- input:
26.95
8
---- correct output:
172.48
---- user output:
215.6
21.56
-- TEST CASE 3:
---- input:
42.42
3
---- correct output:
101.81
---- user output:
127.26
33.94
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:46:27) 
-- CODE:
precoingresso=(float(input("Qual o valor integrau do ingresso ?")))
quantidadeingresso=(int(input("Qual a quantidade de ingressos?")))
valortotaldacompra=precoingresso*quantidadeingresso
print(round(valortotaldacompra, 2))
precoPromocional= precoingresso-(precoingresso*(20/100))
print(round(precoPromocional, 2))
-- OUTPUT:
142.5
22.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:47:18) 
-- CODE:
precoingresso=(float(input("Qual o valor integrau do ingresso ?")))
quantidadeingresso=(int(input("Qual a quantidade de ingressos?")))
valortotaldacompra=precoingresso*quantidadeingresso
print(round(valortotaldacompra, 2))
precoPromocional= precoingresso-(precoingresso*(20/100))
print(round(precoPromocional, 2))
-- OUTPUT:
142.5
22.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:48:38) 
-- CODE:
precoingresso=(float(input("Qual o valor integrau do ingresso ?")))
quantidadeingresso=(int(input("Qual a quantidade de ingressos?")))
valortotaldacompra=precoingresso*quantidadeingresso
print(round(valortotaldacompra, 2))
precoPromocional= precoingresso-(precoingresso*(20/100))
print(round(precoPromocional, 2))
-- EXECUTION TIME:
0.201707
-- TEST CASE 1:
---- input:
28.50
5
---- correct output:
114.0
---- user output:
142.5
22.8
-- TEST CASE 2:
---- input:
26.95
8
---- correct output:
172.48
---- user output:
215.6
21.56
-- TEST CASE 3:
---- input:
42.42
3
---- correct output:
101.81
---- user output:
127.26
33.94
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:49:08) 
-- CODE:
precoingresso=(float(input("Qual o valor integrau do ingresso ?")))
quantidadeingresso=(int(input("Qual a quantidade de ingressos?")))
valortotaldacompra=precoingresso*quantidadeingresso
print(round(valortotaldacompra, 2))
precoPromocional= precoingresso-(precoingresso*(20/100))
print(round(precoPromocional, 2))
-- OUTPUT:
142.5
22.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:49:58) 
-- CODE:
precoingresso=(float(input("Qual o valor integrau do ingresso ?")))
quantidadeingresso=(int(input("Qual a quantidade de ingressos?")))
valortotaldacompra=precoingresso*quantidadeingresso
print(round(valortotaldacompra, 2))
precoPromocional= precoingresso-(precoingresso*(20/100))
print(round(precoPromocional, 2))
-- EXECUTION TIME:
0.190461
-- TEST CASE 1:
---- input:
28.50
5
---- correct output:
114.0
---- user output:
142.5
22.8
-- TEST CASE 2:
---- input:
26.95
8
---- correct output:
172.48
---- user output:
215.6
21.56
-- TEST CASE 3:
---- input:
42.42
3
---- correct output:
101.81
---- user output:
127.26
33.94
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:50:09) 
-- CODE:
precoingresso=(float(input("Qual o valor integrau do ingresso ?")))
quantidadeingresso=(int(input("Qual a quantidade de ingressos?")))
valortotaldacompra=precoingresso*quantidadeingresso
print(round(valortotaldacompra, 2))
precoPromocional= precoingresso-(precoingresso*(20/100))
print(round(precoPromocional, 2))
-- EXECUTION TIME:
0.156919
-- TEST CASE 1:
---- input:
28.50
5
---- correct output:
114.0
---- user output:
142.5
22.8
-- TEST CASE 2:
---- input:
26.95
8
---- correct output:
172.48
---- user output:
215.6
21.56
-- TEST CASE 3:
---- input:
42.42
3
---- correct output:
101.81
---- user output:
127.26
33.94
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:50:11) 
-- CODE:
precoingresso=(float(input("Qual o valor integrau do ingresso ?")))
quantidadeingresso=(int(input("Qual a quantidade de ingressos?")))
valortotaldacompra=precoingresso*quantidadeingresso
print(round(valortotaldacompra, 2))
precoPromocional= precoingresso-(precoingresso*(20/100))
print(round(precoPromocional, 2))
-- EXECUTION TIME:
0.195389
-- TEST CASE 1:
---- input:
28.50
5
---- correct output:
114.0
---- user output:
142.5
22.8
-- TEST CASE 2:
---- input:
26.95
8
---- correct output:
172.48
---- user output:
215.6
21.56
-- TEST CASE 3:
---- input:
42.42
3
---- correct output:
101.81
---- user output:
127.26
33.94
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:50:12) 
-- CODE:
precoingresso=(float(input("Qual o valor integrau do ingresso ?")))
quantidadeingresso=(int(input("Qual a quantidade de ingressos?")))
valortotaldacompra=precoingresso*quantidadeingresso
print(round(valortotaldacompra, 2))
precoPromocional= precoingresso-(precoingresso*(20/100))
print(round(precoPromocional, 2))
-- EXECUTION TIME:
0.132529
-- TEST CASE 1:
---- input:
28.50
5
---- correct output:
114.0
---- user output:
142.5
22.8
-- TEST CASE 2:
---- input:
26.95
8
---- correct output:
172.48
---- user output:
215.6
21.56
-- TEST CASE 3:
---- input:
42.42
3
---- correct output:
101.81
---- user output:
127.26
33.94
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:50:13) 
-- CODE:
precoingresso=(float(input("Qual o valor integrau do ingresso ?")))
quantidadeingresso=(int(input("Qual a quantidade de ingressos?")))
valortotaldacompra=precoingresso*quantidadeingresso
print(round(valortotaldacompra, 2))
precoPromocional= precoingresso-(precoingresso*(20/100))
print(round(precoPromocional, 2))
-- EXECUTION TIME:
0.146526
-- TEST CASE 1:
---- input:
28.50
5
---- correct output:
114.0
---- user output:
142.5
22.8
-- TEST CASE 2:
---- input:
26.95
8
---- correct output:
172.48
---- user output:
215.6
21.56
-- TEST CASE 3:
---- input:
42.42
3
---- correct output:
101.81
---- user output:
127.26
33.94
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
